--- a/.reek.yml
+++ b/.reek.yml
@@ -2,6 +2,8 @@ exclude_paths:
   - spec/support/helpers.rb
 
 detectors:
+  TooManyStatements:
+    max_statements: 15
   IrresponsibleModule:
     exclude:
       - Leo
