--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,13 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.6.0
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
 before_install: gem install bundler -v 1.17.2
+notifications:
+  email:
+on_success: never
+script:
+- bundle exec rake
