--- a/.reek.yml
+++ b/.reek.yml
@@ -2,6 +2,8 @@ exclude_paths:
   - spec/support/helpers.rb
 
 detectors:
+  NestedIterators:
+    max_allowed_nesting: 2
   TooManyStatements:
     max_statements: 15
   IrresponsibleModule:
