--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,14 @@ notifications:
 on_success: never
 script:
 - bundle exec rake
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=3f076d52756ee45e433c18a643cea7b6e0e4734b1f6c3d51b390c4ef7e1d803d
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
